# mrdummy

./: README.md
arduino stuff/key_control/: package.xml
arduino stuff/key_control/script/: encoder.py
description/: package.xml
description/launch/: dummy.launch
description/meshes/: Arm1.stl  Shoulder1.stl  base.stl  wrist1.stl  wrist2.stl
description/urdf/: bot.urdf
description/world/: env.world
key_control/: CMakeLists.txt
key_control/script/: key_catcher.py
mrdummy_description/: CMakeLists.txt  package.xml
mrdummy_description/Mesh/: Arm1.stl  Base.stl
mrdummy_description/launch/: gazebo.launch
mrdummy_movieit_gazebo/: .setup_assistant  CMakeLists.txt  package.xml
mrdummy_movieit_gazebo/config/: fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  mrdummy.srdf  ompl_planning.yaml  ros_controllers.yaml  simple_moveit_controllers.yaml  stomp_planning.yaml
mrdummy_movieit_gazebo/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml  stomp_planning_pipeline.launch.xml
programs/: CMakeLists.txt  package.xml
programs/src/: cp.cpp
robot_description/: package.xml
robot_description/Mesh/: Arm2.stl  Shoulder1.stl  wrist 1.stl  wrist2.stl
robot_description/launch/: gazebo.launch
robot_description/urdf/: mrdummy.urdf
